service-ai-agents/ai-agents01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-difyab-api
  namespace: difyab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: difyab-api
  template:
    metadata:
      labels:
        app: difyab-api
    spec:
      containers:
        - name: difyab-api
          image: crdifyaipoc001.azurecr.io/v2/dify-poc/difyab-api:latest
          resources:
            requests:
              cpu: '750m' # 250
              memory: '384Mi' # 128
            limits:
              cpu: '1500m' # 500
              memory: '768Mi' # 256
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-lb-difyaiab-be
  namespace: difyaiab
spec:
  selector:
    app: difyaiab-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-cip-difyaiab-be
  namespace: difyaiab
spec:
  selector:
    app: difyaiab-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
