service-ai-agents/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: difyaiab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-difyaiab-be
  namespace: difyaiab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: difyaiab-be
  template:
    metadata:
      labels:
        app: difyaiab-be
    spec:
      containers:
        - name: difyaiab-be
          image: crdifyaipoc001.azurecr.io/v2/dify-poc/difyaiab-be:latest
          resources:
            requests:
              cpu: '250m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-lb-difyaiab-be
  namespace: difyaiab
spec:
  selector:
    app: difyaiab-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-cip-difyaiab-be
  namespace: difyaiab
spec:
  selector:
    app: difyaiab-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
